--- a/algebraic-effects-montague.cabal
+++ b/algebraic-effects-montague.cabal
@@ -22,11 +22,11 @@ library
   exposed-modules:     Algebraic
                      , Fragment
                      , Model
-                     , Parameterized
   -- other-modules:
   -- other-extensions:
   build-depends:       base
                      , effect-monad
+                     , mtl
                      , type-level-sets
   hs-source-dirs:      src
   default-language:    Haskell2010
